--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -1,31 +1,13 @@
 on:
   workflow_dispatch:
+    inputs:
+      release_tag:
+        description: 'release tag'
+        default: 'FriendlyWrt-2025-05-07'
+        required: true
+        type: string
   
 jobs:
-  prepare_release:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Get release tag
-      id: release_tag
-      run: |
-        release_tag="FriendlyWrt-$(date +%Y-%m-%d)"
-        echo "##[set-output name=release_tag;]$release_tag"
-
-    - name: Create empty release
-      id: release
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.release_tag.outputs.release_tag }}
-        draft: false
-        prerelease: false
-    outputs:
-      release_tag: ${{ steps.release_tag.outputs.release_tag }}
-      upload_url: ${{ steps.release.outputs.upload_url }}
-
-
-
   build_img:
     runs-on: ubuntu-22.04
 
