--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -117,6 +117,7 @@ jobs:
         TARGET_SD_RAW_FILENAME=${FILENAME}
         ENABLE_OPT_PARTITION=false
         TARGET_SD_IMAGESIZE=300
+        TARGET_ROOTFS_PARTSIZE=0
         EOL
         echo "##[set-output name=img_filename;]$FILENAME"
 
